discussion/kv_engine/162980/162980_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48680: Make NexusErorrHandlingMethod generic

When we add optional vbucket mapping sanity checks this error
handling enum will be re-used.

Change-Id: I80f9386bccf4bc9d9832a9c10dc78d51577e1fcc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-06 13:28:02.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-10-06 13:28:52.000000000
Message: 
Patch Set 6: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-06 14:11:33.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34725/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/error_handler.cc:25:5:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34725/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13205/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.cc:25:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::assume_unreachable();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13205/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.cc:25:5:
error: use of undeclared identifier "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13205/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40820/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11992/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2822/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14803/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15074/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15663/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23089/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2857/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13950/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
